# kurrentschrift

./: .dockerignore  .editorconfig  .env.example  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  SECURITY.md  alembic.ini  codecov.yml  pyproject.toml
.claude/commands/: prime.md  start.md
.claude/skills/audit-licenses/: SKILL.md
.claude/skills/open-pr/: SKILL.md
.claude/skills/optimize-glyphs/: SKILL.md
.claude/skills/optimize-skills/: SKILL.md
.claude/skills/verify-api/: SKILL.md
.claude/skills/verify-core/: SKILL.md
.claude/skills/verify-frontend/: SKILL.md  cloud-probe.mjs
.claude/skills/verify-migrations/: SKILL.md
.claude/skills/write-docs/: SKILL.md
.design-sync/: NOTES.md  config.json  conventions.md  glkurrent.css  tsconfig.designsync.json
.design-sync/previews/: BootStatus.tsx  InfoHint.tsx  PaperBackground.tsx  PublicFooter.tsx  PublicHeader.tsx  WrittenGlyph.tsx  _writtenGlyphData.ts
.design-sync/shims/: suetterlin-font.ts
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_bbox_guides.py  0003_bbox_locked.py  0004_library_schema.py  0005_bbox_split.py  0006_suetterlin_source.py  0007_bbox_ink_and_fill.py  0008_offenbacher_source.py  0009_bbox_patches.py  0010_quiz_words.py  0011_quiz_words_reseed.py  0012_petzendorfer_source.py  0013_quiz_words_created_at_not_null.py  0014_gulden_note_silver.py  0015_template_glyph_key_unique.py  0016_quiz_gloss_fixes.py  0017_position_removal.py  0018_glyph_pairs.py
api/: Dockerfile  __init__.py  auth.py  cache.py  cloudbuild.yaml  dependencies.py  http.py  main.py  rendering.py  schemas.py
api/core/: __init__.py  pipeline.py  schemas.py  settings.py
api/routers/: __init__.py  bboxes.py  canonical.py  chart.py  glyphs.py  hands.py  health.py  pairs.py  quiz_words.py  render.py  sources.py  styles.py  templates.py  word_samples.py  write.py
app/: .gitignore  Dockerfile  THIRD_PARTY_NOTICES.md  cloudbuild.yaml  designsync-entry.tsx  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/: llms.txt  robots.txt  sitemap.xml
app/scripts/: dump-compose-golden.mjs
app/src/: App.tsx  api.ts  constants.ts  global-config.ts  main.tsx  router.tsx  state.tsx  styles.css  theme.ts  types.ts
app/src/components/: ChartCanvas.tsx  DiagnosticDialog.tsx  DiagnosticView.tsx  FitView.tsx  GlyphSidebar.tsx  PaperBackground.tsx  PublicHeader.tsx  RightPanel.tsx  WrittenGlyph.tsx
app/src/domain/: glyphs.ts  (+4 more)
core/: __init__.py  chart.py  compose.py  config.py  extract.py  fit.py  geometry.py  pipeline.py  quality.py  quality_suetterlin.py  shaping.py  suetterlin.py  template.py  widths.py  word_metric.py
core/database/: __init__.py  connection.py  models.py  repositories.py
data/: DATA_PROVENANCE.md
docs/: contributing.md  index.md
docs/concepts/: architektur.md  design-system.md  federmodelle.md  mvp-roadmap.md  naming-und-setup.md  style-guide.md  vision.md
docs/notes/: deploy-bootstrap-status.md  stifte-fuer-unterwegs.md
docs/proposals/: kurrent-writer-and-recognizer.md  planaenderungen.md  schreibsystem-redesign.md  schreibsystem-und-wortbench.md  uebergaenge-befund.md
docs/reference/: LandingPage.tsx  animation-rendering.md  datenablage.md  frontend-stack.md  htr-integration.md  kurrentschrift-landing.html  orthographie-regeln.md  qualitaetsmetrik.md  quellen-und-rechte.md  quiz-wortbank.md  sprachregelung.md  styleanalyse.md  werkzeuge.md  write-api.md
docs/schriftkunde/: allgemein.md  digital.md  druckschriften.md  kurrent.md  lateinische-und-englische-schreibschrift.md  offenbacher.md  orthographie-regeln.md  suetterlin.md  tinte-und-material.md  zahlen-und-zeichen.md
mvp/: __init__.py  extract.py  render_canonicals.py  run_demo.py  template.py
mvp/canonical/: e-medial_v0.json  loth_bboxes.json  s-final_v0.json  s-medial_v0.json
mvp/tools/: __init__.py  annotate_chart.py  inspect_crop.py  loth.py  trace_skeleton.py
tests/: api_harness.py  conftest.py  test_api_admin_writes.py  test_api_auth.py  test_api_compute_endpoints.py  test_api_http.py  test_api_pairs.py  test_api_shared.py  test_api_word_samples.py  test_chart.py  test_compose_coupling.py  test_compose_golden.py  test_compose_joins.py  test_compose_provenance.py  test_corner_knots.py  test_ductus_refinement.py  test_extract.py  test_fit.py  test_fluent_widen.py  test_geometry.py  test_glyphlab.py  test_imports.py  test_lab_fixture_wiring.py  test_pair_harvest.py  test_pairlab.py  test_pipeline.py  test_quality.py  test_quality_components.py  test_quality_regressions.py  test_quizgen.py  test_refine.py  test_rendering_pool.py  test_suetterlin.py  test_suetterlin_vertical.py  test_template.py  test_tri_script.py  test_widths.py  test_wordbench_segments.py  test_wordbench_slant.py  test_wordlab.py
tests/fixtures/: shaping_cases.json
tools/: __init__.py
tools/glyphbench/: README.md  __init__.py  export_fixtures.py  overlay.py  run.py
tools/glyphlab/: README.md  __init__.py  __main__.py  cases.py  derive.py  render.py
tools/pairlab/: README.md  __init__.py  __main__.py  analyze.py  harvest.py  render.py
tools/quizgen/: __init__.py  build.py  corpus.py  quiz_words.json  similarity.py
tools/wordbench/: README.md  __init__.py  export_fixtures.py  metric.py  propose_boxes.py  run.py  slant.py
tools/wordlab/: README.md  __init__.py  __main__.py  cases.py  derive.py  render.py
(+157 files in other folders)
