# pyproject.toml
[project]
name = "kurrentschrift"
version = "0.13.0"
description = "Analysis-by-synthesis ductus-template extraction and re-inking for normed pre-1900 German Kurrent script."
authors = [{ name = "Markus Neusinger", email = "admin@kurrentschrift.ink" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = [
    "kurrent",
    "paleography",
    "german-cursive",
    "historical-handwriting",
    "handwriting-synthesis",
    "analysis-by-synthesis",
    "ductus",
]
dependencies = [
    # Scientific stack — ductus extraction, distance transform, skeletonisation
    "numpy>=2.5.1",
    "scipy>=1.18.0",
    "scikit-image>=0.24",
    "pillow>=12.3.0",
    # API
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.0.0",
    # Admin auth — Cloudflare Access JWT verification against the team JWKS.
    "pyjwt[crypto]>=2.13.0",
    # Database — Postgres (Cloud SQL on the anyplot instance for now)
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30.0",
    "pg8000>=1.31.0",
    "alembic>=1.18.5",
    "cloud-sql-python-connector[asyncpg,pg8000]>=1.20.4",
    "shapely>=2.1.2",
    "orjson>=3.11.9",
]

[project.optional-dependencies]
# Visualisation for the dev inspection tools (tools/glyphlab). Kept OUT of the
# runtime `dependencies` so it never enters the Cloud Run image — only dev/test.
viz = [
    "matplotlib>=3.9",
]
dev = [
    "ruff>=0.15.20",
    # Type stubs for the numpy/scipy-heavy core (dev-only — never in the runtime image).
    "scipy-stubs~=1.18.0",
    "kurrentschrift[viz]",
]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5",
    "aiosqlite>=0.20",
    "kurrentschrift[viz]",
]

[project.urls]
Homepage = "https://kurrentschrift.ink"
Repository = "https://github.com/MarkusNeusinger/kurrentschrift"

# ===== Ruff Configuration =====

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "W",       # pycodestyle warnings
    "I",       # isort
    "C",       # flake8-comprehensions
    "B",       # flake8-bugbear
    "UP007",   # pyupgrade: use X | Y instead of Optional[X] / Union[X, Y]
    "UP045",   # pyupgrade: use X | None instead of Optional[X]
]
ignore = [
    "E501",  # Line too long (formatter handles where sensible)
    "C901",  # Too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
known-first-party = ["core", "api"]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are designed to be evaluated once in
# argument defaults — the idiomatic pattern, not a B008 mutable-default bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header"]

# ===== Pytest =====

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra"]
filterwarnings = [
    # Deprecations from OUR code fail loudly instead of accumulating as noise
    # (the 422-constant rename sat unnoticed behind 9 warnings). Third-party
    # deprecations stay warnings — we can't fix those here. The module regex
    # is start-anchored by re.match; the (\.|$) boundary stops prefix
    # collisions with third-party packages like `apischema` or `corenlp`.
    'error::DeprecationWarning:api(\.|$)',
    'error::DeprecationWarning:core(\.|$)',
    'error::DeprecationWarning:tools(\.|$)',
]
